[package]
name = "wifiqr"
version = "0.0.7"
authors = ["davidk"]
edition = "2018"
license = "MIT"
description = "Generate QR codes for wifi access"
repository = "https://github.com/davidk/WifiQr"
readme = "README.md"

[dependencies]
qrcodegen = "1.4.0"
image = "0.23.13"
imageproc = "0.22.0"
clap = "2.32.0"
rpassword = "5.0.1"
